--- a/templates/user_stream.html
+++ b/templates/user_stream.html
@@ -8,24 +8,20 @@
     <div class="grid-50">
         <div class="grid-33">
             <h5>Posts</h5>
-            <p>{{ User.posts.count()}} </p>
+            <p>{{ user.posts.count()}} </p>
         </div>
-        
         <div class="grid-33">
             <h5>Followers</h5>
-            <p>0 </p>
+            <p>0</p>
         </div>
-        
         <div class="grid-33">
             <h5>Following</h5>
-            <p>0 </p>
+            <p>0</p>
         </div>
-    
     </div>
-    </div> class="grid -25">
+    </div class="grid-25">
         <!--folow/unfollow button-->
     </div>
 </div>
-
-{{super() }}
+{{ super() }}
 {% endblock %}
