--- a/templates/stream.html
+++ b/templates/stream.html
@@ -12,7 +12,7 @@
     <time data-time="{{ post.timestamp }}" class="distime" datetime="{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}">
       {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
     </time>
-    <a href="#" class="view">View</a>
+    <a href="{{ url_for('view_post', post_id=post.id) }}" class="view">View</a>
     <div class="post">
       {{ post.content }}
     </div>
