--- a/templates/stream.html
+++ b/templates/stream.html
@@ -9,7 +9,7 @@
       </a>
     </h2>
     <i class="clock"></i>
-    <time data-time="{{ post.timestamp }}" class="distime" datetime="{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}">
+    <time data-time="{{ post.timestamp }}" >
       {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
     </time>
     <a href="{{ url_for('view_post', post_id=post.id) }}" class="view">View</a>
